Objetivo 4 - Vistas. 1. Vista de Transacciones, condicion de existencia para algunas operaciones antes de ejecucion.

--- a/act_Application/Views/Home/Index.cshtml
+++ b/act_Application/Views/Home/Index.cshtml
@@ -96,7 +96,7 @@
                             }
                         </td>
                         <td class="col-mult">
-                            @if ((bool) new MultaRepository().OperacionesMulta(2, 0, IdUser))
+                            @if ((bool) new MultaRepository().OperacionesMultas(2, 0, IdUser))
                             {
                                 var firstModel = Model.FirstOrDefault();
                                 if (firstModel != null)
