--- a/act_Application/Views/TablaMultados/Index.cshtml
+++ b/act_Application/Views/TablaMultados/Index.cshtml
@@ -3,7 +3,7 @@
 @model IEnumerable<act_Application.Models.BD.ActMulta>;
 @{
     ViewData["Title"] = "Tabla de Multados";
-    bool condicion = (bool)new MultaRepository().OperacionesMulta(1, 0, 0);
+    bool condicion = (bool)new MultaRepository().OperacionesMultas(1, 0, 0);
 }
 <header>
     <meta charset="UTF-8">
